fixed header alignment on static pages

--- a/plugins/arSenecaACPlugin/css/less/header.less
+++ b/plugins/arSenecaACPlugin/css/less/header.less
@@ -237,7 +237,7 @@
   }
 
   #header {
-    height: 180px;
+    height: 137px;
     margin-left: -20px;
     margin-right: -20px;
   }
